force-app/main/default/objects/AV_ZonaHoraria__c/AV_ZonaHoraria__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>almacenar y gestionar información relacionada con zonas horarias específicas</description>
    <label>AV_ZonaHoraria</label>
</CustomObject>