force-app/main/default/objects/AV_ZonaHoraria__c/fields/AV_CustomSettingId__c.field-meta.xml
<CustomField>
    <fullName>AV_CustomSettingId__c</fullName>
    <description>Almacena el id de la custom setting</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_CustomSettingId</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>