force-app/main/default/objects/AV_ZonaHoraria__c/fields/AV_FechaInicioInvierno__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaInicioInvierno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_FechaInicioInvierno</label>
    <type>Date</type>
</CustomField>