force-app/main/default/objects/AV_ZonaHoraria__c/fields/AV_FechaInicioVerano__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaInicioVerano__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_FechaInicioVerano</label>
    <type>Date</type>
</CustomField>