force-app/main/default/objects/AV_ZonaHoraria__c/fields/AV_IncrementoHorarioVerano__c.field-meta.xml
<CustomField>
    <fullName>AV_IncrementoHorarioVerano__c</fullName>
    <label>AV_IncrementoHorarioVerano</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>